<resources>
    <string name="app_name">WanAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_article_detail">articleDetail</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登   录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">用户名长度小于6</string>
    <string name="error_invalid_password">密码长度小于6</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请输入用户名</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="checkbox__remember">记住密码</string>
    <string name="checkbox_login">自动登录</string>
    <string name="second_password">密码</string>
    <string name="password_different">两次输入的密码应该一致</string>
    <string name="action_register">注册</string>
    <string name="knowledgeSystem">知识体系</string>
    <string name="about">关于</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="version">版本</string>
    <string name="logout">登出</string>
    <string name="register">注    册</string>
    <string name="noaccount">没有账户？请注册</string>
    <string name="copyright">Photo by Colin Moldenhauer on Unsplash</string>
    <string name="hasaccount">已有账户？请登录</string>
    <string name="registercopyright">Photo by Brent Cox on Unsplash</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="introduction">本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识； 除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</string>
</resources>
