<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/test111"
    tools:context=".login.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/wanandroid"
            android:scaleType="centerInside"
            android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                style="@style/myLoginStyle"
                android:id="@+id/layout_user"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="10dp"/>

            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/myLoginStyle"
            android:id="@+id/layout_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/myLoginStyle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/layout_rePassword"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:background="#4F7F97"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasaccount"
            android:textColor="#070708"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registercopyright"
            android:textColor="#0c0d0e"
            android:layout_marginTop="110dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>